All toggleables working now, only the action groups that actually do anything get highlighted

--- a/KSP-Chroma-Control/KSP-Chroma-Control/KSP-Chroma-Control.csproj
+++ b/KSP-Chroma-Control/KSP-Chroma-Control/KSP-Chroma-Control.csproj
@@ -46,6 +46,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ColorSchemes\ColorScheme.cs" />
+    <Compile Include="ColorSchemes\EVAScheme.cs" />
     <Compile Include="ColorSchemes\LogoScheme.cs" />
     <Compile Include="ColorSchemes\FlightScheme.cs" />
     <Compile Include="CraftState.cs" />
