Changed keybindings to Unity Keybindings instead of strings

--- a/KSP-Chroma-Control/KSP-Chroma-Control/KSP-Chroma-Control.csproj
+++ b/KSP-Chroma-Control/KSP-Chroma-Control/KSP-Chroma-Control.csproj
@@ -60,10 +60,11 @@
     <Compile Include="SceneManagers\FlightSceneManager.cs" />
     <Compile Include="SceneManagers\SceneManager.cs" />
     <Compile Include="ColorSchemes\VabScheme.cs" />
+    <Compile Include="Config.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>copy "$(TargetName).dll" "G:\Games\SteamApps\steamapps\common\Kerbal Space Program\GameData\TorqDev\ChromaControlPlugin"</PostBuildEvent>
+    <PostBuildEvent>copy "$(TargetName).dll" "G:\Games\SteamApps\steamapps\common\Kerbal Space Program\GameData\KSPChromaControl"</PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
