--- a/KSP-Chroma-Control/KSP-Chroma-Control/KSP-Chroma-Control.csproj
+++ b/KSP-Chroma-Control/KSP-Chroma-Control/KSP-Chroma-Control.csproj
@@ -55,6 +55,8 @@
     <Compile Include="ColorSchemes\FlightScheme.cs" />
     <Compile Include="DataDrain.cs" />
     <Compile Include="KSPChromaPlugin.cs" />
+    <Compile Include="LogitechDrain.cs" />
+    <Compile Include="LogitechGSDK.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SceneManagers\VABSceneManager.cs" />
     <Compile Include="SceneManagers\FlightSceneManager.cs" />
