--- a/KSP-Chroma-Control/KSP-Chroma-Control/KSP-Chroma-Control.csproj
+++ b/KSP-Chroma-Control/KSP-Chroma-Control/KSP-Chroma-Control.csproj
@@ -54,6 +54,7 @@
     <Compile Include="ColorSchemes\LogoScheme.cs" />
     <Compile Include="ColorSchemes\FlightScheme.cs" />
     <Compile Include="DataDrain.cs" />
+    <Compile Include="KeyboardAnimation.cs" />
     <Compile Include="KSPChromaPlugin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SceneManagers\VABSceneManager.cs" />
@@ -61,6 +62,7 @@
     <Compile Include="SceneManagers\SceneManager.cs" />
     <Compile Include="ColorSchemes\VabScheme.cs" />
     <Compile Include="Config.cs" />
+    <Compile Include="SplashdownAnimation.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
